DELETE + VALIDATION
